Tue Nov 15 20:37:49 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* decode.c (decode): Don't give warning on unsupported local labels
	when it concerns a macro.

Mon Nov 14 23:20:43 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/local_label.s: Enhance.
	* symbol.c (Symbol_CreateSymbolOut): Make missing local label an
	abort error to avoid an assert going off later.
	* decode.c (decode): Define local lable before trying to parse
	the mnemonic.

Sun Nov 13 18:33:56 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/include/predef_reg_test.s: Add test on v8.
	* regression/tests_pass/apcs-none.s: Update reference.
	* regression/tests_pass/apcs-3-reentrant.s: Likewise.
	* regression/tests_pass/apcs-3.s: Likewise.
	* regression/tests_pass/apcs-3-reentrant-noswstackcheck.s: Likewise.
	* regression/tests_pass/apcs-3-nofp.s: Add.
	* symbol.c (Symbol_Init): When a nofp APCS flavour is selected, don't
	define fp but define v8 instead.

Sun Nov 13 17:47:43 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* main.c, main.h (option_autocast): Remove.
	* commands.c (DefineReal): Drop support for option autocast.  Assume
	this to be always set.
	* code.c (codeEvalLow): Likewise.
	* help_cop.c (help_copAddr): Likewise.
	* value.c (valueEqual): Likewise.
	* m_fpe.c (getFloatRhs): Likewise.
	* lit.c (Lit_DumpPool): Likewise.

Sun Nov 13 17:28:06 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/variable_substitution.s: Enhance test.
	* input.c (Input_ArgSub): Vertical bar prevented variable substitution.

Sun Nov 13 16:22:24 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* symbol.c (NeedToOutputSymbol): Fix KEEP support.
	(Symbol_OutputForAOF, Symbol_OutputForELF): Remove ValueCode support.
	* m_cpuctrl.c (Branch_RelocUpdater, branch_shared): Simplify.
	* output.c (outputElf): Fix section start address for absolute
	areas.
	* targetcpu.c (Target_NeedAtLeastArch): Avoid crash when no CPU can
	be suggested.